tests/golden/single-openshift-integration/grafana-helm/grafana-helm/30_openshift_integration/metrics-route.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    syn.tools/source: https://github.com/projectsyn/component-grafana-helm.git
  labels:
    app.kubernetes.io/component: grafana-helm
    app.kubernetes.io/instance: grafana-helm
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: syn
  name: grafana-helm-metrics-blackhole
  namespace: syn-grafana
spec:
  ports:
    - name: metrics
      port: 3000
      protocol: TCP
      targetPort: metrics
  selector:
    app.kubernetes.io/metrics-blackhole: 'true'
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    syn.tools/source: https://github.com/projectsyn/component-grafana-helm.git
  labels:
    app.kubernetes.io/component: grafana-helm
    app.kubernetes.io/instance: grafana-helm
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: syn
  name: grafana-helm-metrics
  namespace: syn-grafana
spec:
  host: grafana.apps.example.com
  path: /metrics
  port:
    targetPort: metrics
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: grafana-helm-metrics-blackhole
    weight: 100
  wildcardPolicy: None
