tests/golden/single-openshift-integration/grafana-helm/grafana-helm/30_openshift_integration/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    syn.tools/source: https://github.com/projectsyn/component-grafana-helm.git
  labels:
    app.kubernetes.io/component: grafana-helm
    app.kubernetes.io/instance: grafana-helm
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: syn
  name: grafana-helm
  namespace: syn-grafana
spec:
  host: my-grafana.apps.example.com
  path: /
  port:
    targetPort: service
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: grafana-helm
    weight: 100
  wildcardPolicy: None
